<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Quiz">

    <TextView
            android:text="@string/Start_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quiz_view_high_score"
            android:textColor="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/editText"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:hint="@string/name_hint"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:text="@string/check_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:onClick="onNameEntered"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <ImageView
            android:layout_width="160dp"
            android:contentDescription="@string/quiz_pic_desc"
            android:layout_height="190dp" app:srcCompat="@drawable/defaultpicture"
            android:id="@+id/imageView" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>