<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="55dp"
              android:padding="2dp">
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_weight="0"
            android:contentDescription="@string/person_image"
            android:id="@+id/person_item_image"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="30sp"
            android:layout_weight="8"
            android:maxLength="12"
            android:ellipsize="end"
            android:id="@+id/person_item_name"/>
    <Button
            android:text="@string/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_weight="0"
            android:id="@+id/person_item_deleteBtn"/>

</LinearLayout>