...
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:hint="@string/navnIdHint"/>
    <LinearLayout
            android:orientation="horizontal"
...
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/chooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:onClick="openGallery"
                tools:layout_editor_absoluteY="454dp" app:layout_constraintEnd_toStartOf="@+id/button3"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_Person_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
